based fix comit and add config

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "node test.js",
     "start": "electron index.js",
     "dist": "electron-builder",
-    "build-windows": "electron-packager ./ Mimic --platform=win32 --arch=x64 --prune=true --icon=./icon/icon.ico",
-    "build-mac": "electron-packager ./ Mimic --platform=darwin --arch=x64",
-    "build-linux": "electron-packager ./ Mimic --platform=linux --arch=x64"
+    "build-windows": "electron-packager ./ Mimic-Launcher --platform=win32 --arch=x64 --prune=true --icon=./icon/icon.ico",
+    "build-mac": "electron-packager ./ Mimic-Launcherc --platform=darwin --arch=x64",
+    "build-linux": "electron-packager ./ Mimic-Launcher --platform=linux --arch=x64"
   },
   "build": {
     "productName": "Mimic-Launcher",
